src/objects/Brackets_Group__c.object
<CustomObject>
    <fields>
        <fullName>Brackets_Tournament__c</fullName>
        <label>Tournament</label>
        <referenceTo>Brackets_Tournament__c</referenceTo>
        <relationshipName>Pools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumOfMembers__c</fullName>
        <description>Numbers of members joined to this group.</description>
        <label>Members</label>
        <summaryForeignKey>Brackets_UserTournament__c.Brackets_Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TournamentType__c</fullName>
        <formula>Text(Brackets_Tournament__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TournamentType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Round By Round lets users predict a single round at a time.  Full Tournament requires full prediction up front and cannot be changed.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Tournament</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Round By Round</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Pool</label>
    <nameField>
        <label>Pool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TournamentNotUpdatable</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED( Brackets_Tournament__c )</errorConditionFormula>
        <errorDisplayField>Brackets_Tournament__c</errorDisplayField>
        <errorMessage>This field can&apos;t be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TypeNotUpdatable</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED( Type__c )</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>This field can&apos;t be updated.</errorMessage>
    </validationRules>
</CustomObject>